<resources>
    <string name="app_name">EvoCasa</string>
    <string name="title_hint_Search">Search</string>
    <string name="title_evocasa">EvoCasa</string>
    <string name="title_home">Home</string>
    <string name="title_shop">Shop</string>
    <string name="title_notification">Notification</string>
    <string name="title_profile">Profile</string>
    <string name="title_payment_method">Payment Method</string>
    <string name="title_card">Credit/Debit Card</string>
    <string name="title_momo">MOMO</string>
    <string name="title_banking">Internet Banking</string>
    <string name="title_cod">COD</string>
    <string name="title_total">Total:</string>
    <string name="title_saving">Saving:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_create_new">Create new account</string>
    <string name="title_create_free">Create your free account today – the easiest way to start transforming your home!</string>
    <string name="title_sign_up">Continue with Phone Number</string>
    <string name="title_or_with">or with</string>
    <string name="title_already_account">Already have an account?</string>
    <string name="title_signin">Sign in</string>
    <string name="title_add_email_phone">Add your phone number</string>
    <string name="title_sign_up_email_phone">Phone number</string>
    <string name="title_continue">CONTINUE</string>
    <string name="title_by_using">By using EvoCasa, you agree to the</string>
    <string name="title_term">Terms</string>
    <string name="title_and">and</string>
    <string name="title_privacy">Privacy Policy</string>
    <string name="title_verify_email">Verify your phone</string>
    <string name="title_code_signup">We just sent 5-digit code to your sms, enter it bellow:</string>
    <string name="title_code">Code</string>
    <string name="title_didnt">Didn\'t receive the code?</string>
    <string name="title_send_again">Send again</string>
    <string name="title_verify">VERIFY PHONE NUMBER</string>
    <string name="title_create_account">CREATE ACCOUNT</string>
    <string name="title_type_pw">Type password again</string>
    <string name="title_password">Password</string>
    <string name="title_check1">8 characters minimum</string>
    <string name="title_check2">a number</string>
    <string name="title_check3">a special character</string>
    <string name="title_check4">an uppercase letter</string>
    <string name="title_create_pw">Create your password</string>
    <string name="title_success">Your account \nwas successfully created!</string>
    <string name="title_success_text">Only one click to explore inspiring home ideas!</string>
    <string name="title_sign_in">SIGN IN</string>
    <string name="title_continue_fb">Continue with Facebook</string>
    <string name="title_continue_gg">Continue with Google</string>
    <string name="title_dont">Don\'t have an account?</string>
    <string name="title_signup">Sign up</string>
    <string name="title_welcome_signin">Sign In</string>
    <string name="title_sign_in_text">Hi! Welcome back, you\'ve been missed!</string>
    <string name="title_forgot_password">Forgot Password?</string>
    <string name="title_onboarding1_skip">Skip</string>
    <string name="title_onboarding2_line_1">Explore</string>
    <string name="title_onboarding2_line_2">the soul of</string>
    <string name="title_onboarding2_line_3">EvoCasa</string>
    <string name="title_onboarding2_description">Welcome to Evocasa — where every corner invites warmth, every texture recalls a memory, and every object is chosen with heart. Discover a curated world of vintage living, where beauty comes with a story, and your home becomes a place that truly feels like yours.</string>
    <string name="title_onboarding3_line_1">Every Piece Tells A Story</string>
    <string name="title_onboarding3_description">At Evocasa, every item holds a past — a worn corner, a faded tone, a handmade detail. These quiet imperfections carry charm, history, and warmth. Let your space speak with meaning, not just style.</string>
    <string name="title_onboarding4_line_1">Curate Your Space With Ease</string>
    <string name="title_onboarding4_description">Browse collections, save your favorites, and bring vintage beauty home – all in a few taps</string>
    <string name="title_let_start">Lets start</string>
    <string name="title_onboarding5_line_1">Welcome to EvoCasa</string>
    <string name="title_onboarding5_description">Where every piece tells a story — of comfort, heritage, and time.</string>
    <string name="title_create_account_onboarding5">Create an account</string>
    <string name="title_loginin">Log in</string>
    <string name="title_dot">.</string>
    <string name="title_con_facebook">Continue with Facebook</string>
    <string name="title_con_gg">Continue with Google</string>
    <string name="title_reset_password">Reset password</string>
    <string name="title_reset_pw">RESET PASSWORD</string>
    <string name="title_reset_success">Your password\nreset successfully!</string>
    <string name="title_success_text_reset">Your new password is now active. Let\'s continue!</string>
    <string name="title_category">Category</string>
    <string name="title_flashsale">Flash Sale</string>
    <string name="title_hot_products">Hot Products</string>
    <string name="title_timeless_quality_design">Timeless Quality Design</string>
    <string name="title_see_all">See All</string>
    <string name="title_collection">Collection</string>
    <string name="title_sabi_collection">Sabi Collection</string>
    <string name="title_closing_in">Closing in</string>
    <string name="title_orders">Orders</string>
    <string name="title_wishlist_title">Your Favorite</string>
    <string name="title_wishlist_all_products">All products</string>
    <string name="title_wishlist_on_sale">On Sale</string>
    <string name="title_wishlist_low_stock">Low Stock</string>
    <string name="title_wishlist_out_of_stock">Out of Stock</string>
    <string name="title_wishlist_sort">Sort by</string>
    <string name="title_wishlist_recommend">You might like</string>
    <string name="title_blog">Blog</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_cart_product_title">Your Cart</string>
    <string name="title_cart_empty_title">Your cart is empty!</string>
    <string name="title_cart_empty_description">Click on the button to go find the products you like.</string>
    <string name="title_back_shop">BACK TO SHOP</string>
    <string name="title_cart_product">Travertine Table Lamp</string>
    <string name="title_cart_quantity">1</string>
    <string name="title_all_products_cart">All products</string>
    <string name="title_sub_total">Sub total</string>
    <string name="title_sub_total_amount">$3,500</string>
    <string name="title_use_voucher"><u>Use voucher code</u></string>
    <string name="title_total_cart">Total</string>
    <string name="title_total_cart_amount">$3,500</string>
    <string name="title_check_out">CHECK OUT</string>
    <string name="title_EVOCASA">EVOCASA</string>
    <string name="title_profile_feature">My Features</string>
    <string name="title_profile_support">Support</string>
    <string name="title_view_more">View More</string>
    <string name="txt_status_pending">Pending</string>
    <string name="title_string_pick_up">Pickup</string>
    <string name="title_status_in_transit">In Transit</string>
    <string name="title_review">Review</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_voucher">Voucher</string>
    <string name="title_coin">Coin</string>
    <string name="title_log_out">Log Out</string>
    <string name="title_evocasa_blog">EvoCasa Blog</string>
    <string name="title_chat_with_evocasa">Chat with EvoCasa</string>
    <string name="txt_help_center">Help Center</string>
    <string name="title_edit_personal_title">Edit Personal Information</string>
    <string name="title_edit_name">Name</string>
    <string name="title_edit_name_box">John Anthony</string>
    <string name="title_edit_gender">Gender</string>
    <string name="title_edit_gender_box">Male</string>
    <string name="title_edit_birthday">Birthday</string>
    <string name="title_edit_birthday_box">01/02/2003</string>
    <string name="title_edit_email">Email</string>
    <string name="title_edit_email_box">john123456@gmail.com</string>
    <string name="title_edit_phone">Phone</string>
    <string name="title_edit_phone_box">(+84) 123 456 789</string>
    <string name="title_edit_location">Location</string>
    <string name="title_edit_location_box">669 Do Muoi, Linh Xuan, Thu Duc, HCMC, VietNam</string>
    <string name="title_save_edit_profile">SAVE</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="check_connection">Please check your network\nand try again</string>
    <string name="retry">Retry</string>
    <string name="no_internet_icon">No Internet Icon</string>
    <string name="shipping_policy_detail_title">Shipping Policy</string>
    <string name="shipping_policy_detail_description">Shipping policy applies to customers shopping and making payments directly at EvoCasa store systems or via the EvoCasa app.</string>
    <string name="shipping_policy_general_provisions_title">General Provisions</string>
    <string name="shipping_policy_general_provisions_content_1">Shipping carriers will not resolve compensation claims if you accept the package and sign the delivery receipt. Please inspect packaging before confirming receipt. If there are signs of damage (tears, dents, holes, or water damage), kindly refuse to accept and notify us immediately.</string>
    <string name="shipping_policy_general_provisions_content_2">Orders will be delivered to your doorstep unless there is restricted access (e.g., offices or apartments), in which case delivery will be made to the main entrance only.</string>
    <string name="shipping_policy_general_provisions_content_3">Customers are encouraged to record an unboxing video to document the condition of the package and its contents. This will help with complaint handling if needed.</string>
    <string name="shipping_policy_general_provisions_content_4">For complaints, please provide full order details, along with photos of the package and product, to ensure prompt resolution.</string>
    <string name="shipping_policy_delivery_coverage_title">Delivery Coverage</string>
    <string name="shipping_policy_delivery_coverage_content_1">EvoCasa offers nationwide shipping within Vietnam. For international shipping, please contact Customer Support before ordering.</string>
    <string name="shipping_policy_delivery_coverage_content_2">During pandemics or unforeseen events, shipping areas may be adjusted according to government regulations.</string>
    <string name="shipping_policy_delivery_time_title">Delivery Time</string>
    <string name="shipping_policy_delivery_time_content">Deliveries occur during business hours, Monday to Saturday (excluding Sundays and public holidays). \n• Express Delivery: 2–5 business days \n• Store Pickup: 24–72 hours \nNote: Remote areas may need 1–3 additional days. Customers will be notified of any changes.</string>
    <string name="shipping_policy_shipping_fee_title">Shipping Fees</string>
    <string name="shipping_policy_shipping_fee_content">From January 28, 2025, EvoCasa offers free nationwide shipping for website orders (excluding express delivery).  \nShipping fees depend on distance and product weight. Fees will be shown at checkout after entering the delivery address.</string>
    <string name="shipping_policy_contact_title">Contact Information</string>
    <string name="shipping_policy_contact_content">Hotline: 1900 8386 or 0961 961 961\nHours: 9:00 AM – 9:00 PM, Monday to Sunday (excluding public holidays)</string>
</resources>