<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/bg_dialog_rounded"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:src="@mipmap/nointernet"
        android:contentDescription="@string/no_internet_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_internet"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_connection"
        android:textColor="#666666"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRetryDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:textColor="@android:color/white"
        android:textSize="14sp"/>
</LinearLayout>
