<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_bg"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:fitsSystemWindows="true"
    tools:context=".profile.EditPersonalFragment">

    <!-- Top bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- Nút back -->
        <LinearLayout
            android:id="@+id/btnCartBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@drawable/bg_rounded_button"
            android:orientation="vertical"
            android:clickable="true"

            android:focusable="true">

            <ImageView
                android:id="@+id/imgCartBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_rounded_button"
                android:scaleType="centerInside"
                android:src="@drawable/ic_back" />
        </LinearLayout>

        <!-- Spacer để căn giữa title -->
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.25" />

        <!-- Tiêu đề tùy chỉnh -->
        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/title_edit_personal_title"
            android:textColor="@color/color_5E4C3E"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Spacer phải -->
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.4" />
    </LinearLayout>

    <!--Main-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <!--Name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_edit_name"
                android:textColor="@color/color_5E4C3E"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingBottom="5dp"/>

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textPersonName"
                android:hint="@string/title_edit_name_box"
                android:textColor="@color/color_5E4C3E"
                android:background="@drawable/edittext_background"
                android:padding="12dp" />

        </LinearLayout>


        <!-- Gender & Birthday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <!-- Gender Section -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="12dp"> <!-- khoảng cách giữa gender và birthday -->

                <TextView
                    android:id="@+id/txtGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_edit_gender"
                    android:textColor="@color/color_5E4C3E"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingBottom="5dp" />

                <AutoCompleteTextView
                    android:id="@+id/autoGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:inputType="none"
                    android:drawableEnd="@drawable/ic_arrow_down"
                    android:drawablePadding="8dp"
                    android:padding="12dp"
                    android:hint="@string/title_edit_gender_box"
                    android:textColor="@color/color_5E4C3E" />
            </LinearLayout>

            <!-- Birthday Section -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_edit_birthday"
                    android:textColor="@color/color_5E4C3E"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingBottom="5dp" />

                <EditText
                    android:id="@+id/edtBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:inputType="none"
                    android:focusable="false"
                    android:clickable="true"
                    android:drawableEnd="@drawable/ic_calendar"
                    android:drawablePadding="8dp"
                    android:padding="12dp"
                    android:hint="@string/title_edit_birthday_box"
                    android:textColor="@color/color_5E4C3E" />
            </LinearLayout>
        </LinearLayout>


        <!--Email-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_edit_email"
                android:textColor="@color/color_5E4C3E"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingBottom="5dp"/>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/title_edit_email_box"
                android:background="@drawable/edittext_background"
                android:textColor="@color/color_5E4C3E"
                android:padding="12dp" />
        </LinearLayout>


        <!--Phone-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_edit_phone"
                android:textColor="@color/color_5E4C3E"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingBottom="5dp"/>

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/title_edit_phone_box"
                android:background="@drawable/edittext_background"
                android:textColor="@color/color_5E4C3E"
                android:padding="12dp" />
        </LinearLayout>


        <!--Location-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_edit_location"
                android:textColor="@color/color_5E4C3E"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingBottom="5dp"/>

            <EditText
                android:id="@+id/edtLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:text="@string/title_edit_location_box"
                android:textColor="@color/color_5E4C3E"
                android:background="@drawable/edittext_background"
                android:padding="12dp"
                android:drawableEnd="@drawable/ic_arrow_right_edit"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:clickable="true"/>
        </LinearLayout>


        <!--BUTTON SAVE-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="179dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_pressed_effect"
            android:elevation="2dp"
            android:text="@string/title_save_edit_profile"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"/>


    </LinearLayout>

</LinearLayout>